--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <title>CV</title>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
+    <body>
+        <div class="name_avatar">
+            <img src="access/mr.crab.jpg" class="ava"/>
+            <div class="name">
+                <h2>TA DUC MINH</h2>
+                <p>"Ban an buoi toi chua?"</p>
+            </div>
+        </div>
+    </body>
+</html>
