--- a/index.html
+++ b/index.html
@@ -2,16 +2,33 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
         <title>CV</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
-        <div class="name_avatar">
-            <img src="access/mr.crab.jpg" class="ava"/>
-            <div class="name">
-                <h2>TA DUC MINH</h2>
-                <p>"Ban an buoi toi chua?"</p>
+        <div class="CV">
+            <div class="name_avatar">
+                <img src="access/mr.crab.jpg" class="ava" alt="ava"/>
+                <div class="name">
+                    <h2>TA DUC MINH</h2>
+                    <p>"Ban an buoi toi chua?"</p>
+                </div>
             </div>
-        </div>
+            <div>
+                <h1>Infomation</h1>
+                <p>DoB: 25/11</p>
+                <p>Contact number: 0387493539</p>
+                <p>Email: taducminh25104@gmail.com</p>
+            </div>
+            <div class="skills">
+                <h1>Skills</h1>
+                <p>C: 2 year experience</p>
+                <p>C++: 2 year experience</p>
+                <p>Python: 1.5 year experience</p>
+                <p>Java: 1 year experience</p>
+            </div>
+            
+        </main>
     </body>
 </html>
