--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <p>"Ban an buoi toi chua?"</p>
                 </div>
             </div>
-            <div>
+            <div class="in4">
                 <h1>Infomation</h1>
                 <p>DoB: 25/11</p>
                 <p>Contact number: 0387493539</p>
@@ -28,7 +28,10 @@
                 <p>Python: 1.5 year experience</p>
                 <p>Java: 1 year experience</p>
             </div>
-            
+            <div class="his">
+                <h1>Eduvation level</h1>
+                <p>Student of Posts and Telecommunications Institute of Technology (2022-now)</p>
+            </div>
         </main>
     </body>
 </html>
