--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
         <title>CV</title>
+        <script href="script.js"></script>
         <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
@@ -17,20 +18,25 @@
             </div>
             <div class="in4">
                 <h1>Infomation</h1>
-                <p>DoB: 25/11</p>
-                <p>Contact number: 0387493539</p>
-                <p>Email: taducminh25104@gmail.com</p>
+                <p>- DoB: 25/11</p>
+                <p>- Contact number: 0387493539</p>
+                <p>- Email: taducminh25104@gmail.com</p>
             </div>
             <div class="skills">
                 <h1>Skills</h1>
-                <p>C: 2 year experience</p>
-                <p>C++: 2 year experience</p>
-                <p>Python: 1.5 year experience</p>
-                <p>Java: 1 year experience</p>
+                <p>- C: 2 year experience</p>
+                <p>- C++: 2 year experience</p>
+                <p>- Python: 1.5 year experience</p>
+                <p>- Java: 1 year experience</p>
             </div>
             <div class="his">
                 <h1>Eduvation level</h1>
-                <p>Student of Posts and Telecommunications Institute of Technology (2022-now)</p>
+                <p>- Student of Posts and Telecommunications Institute of Technology (2022-now)</p>
+            </div>
+            <div class="message">
+                <a href="index2.html" targer="_black">
+                    message me
+                </a>
             </div>
         </main>
     </body>
