--- a/index2.html
+++ b/index2.html
@@ -12,16 +12,16 @@
             <div class="nav">
                 < <a href="index.html" target="_blank"> Go back to front page</a>
             </div>
+            <h1>Message me</h1>
             <div class="message">
-                <h1>Message me:</h1>
-                <p>From:</p>
-                <input required  class="from" placeholder="Enter your email here">
-                <p>Title:</p>
-                <input required class="title" placeholder="Enter your title of message">
-                <p>Message:</p>
-                <textarea required class="mesTA" placeholder="Enter your message here" cols="30" rows="3"></textarea>
-                <button class="sendbutton">SEND</button>
+                <p>From</p>
+                <p class="req">*</p><textarea required  class="from" placeholder="Enter your email here" cols="30" rows="1"></textarea>
+                <p>Title</p>
+                <p class="req">*</p><textarea required class="title" placeholder="Enter your title of message" cols="30" rows="1"></textarea>
+                <p>Message</p>
+                <p class="req">*</p><textarea required class="mescontent" placeholder="Enter your message here" cols="30" rows="3"></textarea>
             </div>
+            <button class="sendbutton">SEND</button>
         </main>
     </body>
 </html>
