--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             <div class="name_avatar">
                 <img src="access/mr.crab.jpg" class="ava" alt="ava"/>
                 <div class="name">
-                    <h2>TA DUC MINH</h2>
-                    <p>"Ban an buoi toi chua?"</p>
+                    <h1>TA DUC MINH</h1>
+                    <p>Why are the feet whiter than the face and hands?</p>
+                    <p>- Because they are covered.</p>
                 </div>
             </div>
             <div class="in4">
@@ -34,8 +35,8 @@
                 <p>- Student of Posts and Telecommunications Institute of Technology (2022-now)</p>
             </div>
             <div class="message">
-                <a href="index2.html" targer="_black">
-                    message me
+                <a href="index2.html" target="_blank">
+                    > message me
                 </a>
             </div>
         </main>
