--- a/index2.html
+++ b/index2.html
@@ -4,24 +4,25 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
         <title>CV</title>
-        <script href="script.js"></script>
+        <script src="script.js"></script>
         <link href="style2.css" rel="stylesheet"/>
     </head>
-    <body>
+    <body onload="responsiveButton()">
         <div class="CV">
             <div class="nav">
-                < <a href="index.html" target="_blank"> Go back to front page</a>
+                <a href="index.html" target="_blank">< Go back to front page</a>
             </div>
             <h1>Message me</h1>
             <div class="message">
                 <p>From</p>
-                <p class="req">*</p><textarea required  class="from" placeholder="Enter your email here" cols="30" rows="1"></textarea>
+                <p class="req">*</p><textarea required class="from" placeholder="Enter your email here" cols="30" rows="1"></textarea>
                 <p>Title</p>
                 <p class="req">*</p><textarea required class="title" placeholder="Enter your title of message" cols="30" rows="1"></textarea>
                 <p>Message</p>
                 <p class="req">*</p><textarea required class="mescontent" placeholder="Enter your message here" cols="30" rows="3"></textarea>
             </div>
-            <button class="sendbutton">SEND</button>
+            <button type="submit" onclick="sendEmail(event)" disabled id="send">SEND</button>
+            <div class="notify"> </div>
         </main>
     </body>
 </html>
